sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1: error: ambiguous reference to overloaded definition,
both method cocktailSort in class AlgCocktailSort1 of type ()Unit
and  method cocktailSort in class AlgCocktailSort1 of type ()Unit
match argument types ()
		cocktailSort();
                ^AlgCocktailSort1:26: error: method cocktailSort is defined twice
  conflicting symbols both originated in file 'plm.runtime27.AlgCocktailSort1'
  def cocktailSort() {
      ^